--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,160 @@
-body {
-  background: orange;
+/* style wrapper */
+
+/* .wrapper {
+  max-height: 100px;
+  border: 2px solid transparent;
+  display: flex;
+  overflow-x: auto;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+} */
+
+/* .wrapper::-webkit-scrollbar {
+  width: 0;
+} */
+/* akhir style wrapper */
+
+h2 {
+  text-align: center;
+}
+
+h5{
+  text-align: center;
+}
+
+.modal p {
+  text-align: center;
+  font-size: larger;
+}
+.card {
+  /* padding-bottom: 10px; */
+  /* width: 12rem; */
+  margin-bottom: 30px;
+  list-style: none;
+  /* border: 0px; */
+}
+
+.modal .card {
+  /* padding-bottom: 10px; */
+  /* width: 12rem; */
+  /* margin-bottom: 30px; */
+  list-style: none;
+  border: 0px;
+}
+
+.img-fluid {
+  margin: auto;
+  display: block;
+}
+
+[id="btnproduk"] {
+  background: none;
+  border: 2px solid #000;
+  font-family: "montserrat", sans-serif;
+  text-transform: uppercase;
+  padding: 5px 7px;
+  min-width: 70px;
+  margin: 5px;
+  cursor: pointer;
+  transition: color 0.8s linear;
+  position: static;
+}
+[id="btnproduk"]:hover {
+  color: #fff;
+}
+/* .btn::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: -1;
+  transition: transform 0.5s;
+  transform-origin: 0 0;
+  transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+}
+.btn-warning::before {
+  transform: scaleX(0);
+}
+.btn-warning::before {
+  transform: scaleY(0);
+}
+.btn-primary:hover::before {
+  transform: scaleX(1);
+}
+.btn-primary:hover::before {
+  transform: scaleY(1);
+} */
+
+/* panel wrapper like youtube */
+/* .panel-wrapper {
+  background-color: salmon;
+} */
+
+/* wrapper dalam Modal */
+.wrapper {
+  height: 100px;
+  min-width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.wrapper span {
+  width: 80%;
+  text-align: center;
+  font-size: 55px;
+  font-weight: 600;
+  cursor: pointer;
+  user-select: none;
+}
+.wrapper span.num {
+  font-size: 50px;
+  border-right: 2px solid rgba(0, 0, 0, 0.2);
+  border-left: 2px solid rgba(0, 0, 0, 0.2);
+  pointer-events: none;
+}
+/* akhir wrpper dalam modal */
+
+
+.modal col{
+  color: #000;
+} 
+
+.modal h5{
+  text-align: start;
+}
+
+.modal h4{
+  text-align:end;
+}
+
+[id="batalpesan"] {
+  font-family: "montserrat", sans-serif;
+  text-transform: uppercase;
+  padding: 5px 7px;
+  min-width: 70px;
+  margin: 5px;
+  position: static;
+  justify-content: end;
+}
+
+[id="subtotal"] h4 {
+  font-family: "montserrat", sans-serif;
+  text-transform: uppercase;
+  text-align: start;
+}
+
+[id="total"] h4 {
+  font-family: "montserrat", sans-serif;
+  text-transform: uppercase;
+  text-align: start;
 }
